# weplex

./: .editorconfig  .env.example  .gitignore  .prettierrc  CLAUDE.md  DESIGN.md  LICENSE  PLUGINS.md  PRODUCT.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  PROGRESS.md  ROADMAP.md
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: weplex-mcp-aarch64-apple-darwin  weplex-mcp-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mcp-contract/: Cargo.toml
src-tauri/mcp-contract/src/: lib.rs
src-tauri/mcp-server/: Cargo.toml
src-tauri/mcp-server/src/: ipc_client.rs  main.rs  mcp_protocol.rs  tools.rs
src-tauri/mcp-server/tests/: contract.rs
src-tauri/src/: agents.rs  claude.rs  commands.rs  compiler.rs  context.rs  git.rs  guard.rs  hook_decision.rs  hook_server.rs  hooks.rs  ipc_server.rs  keychain.rs  lockfile.rs  main.rs  manifest.rs  marketplace.rs  mcp.rs  notes_crypto.rs  oauth_server.rs  pipeline_engine.rs  pipeline_parser.rs  platform.rs  plugin_host.rs  profile.rs  pty_manager.rs  resources.rs  secure_store.rs  session_summary.rs  skills.rs  store.rs  utils.rs  weplex_agents.rs  yaml.rs
src-tauri/src/plugins/: browser.rs
src-tauri/tests/: agentshield-vectors.json
src/lib/: types.ts
src/lib/components/: SessionIcon.svelte
src/lib/dev/: seedDemo.ts
src/lib/services/: analytics.ts  apiClient.ts  authService.ts  federationService.test.ts  federationService.ts  marketplaceService.ts  notificationService.ts  pipelineCollabService.ts  pipelineWsService.ts  pluginLoader.ts  profileArchive.ts  spaceService.ts  syncService.ts  teamService.ts  tokenPersistence.ts  wsService.ts
src/lib/stores/: authStore.svelte.ts  chatStore.svelte.ts  collabPipelineStore.svelte.ts  commandStore.svelte.ts  contextInjectionStore.svelte.ts  dragStore.svelte.ts  featureFlagsStore.svelte.ts  folderStore.svelte.ts  guardStore.svelte.ts  guardStore.test.ts  hookStore.svelte.ts  lockfileStore.svelte.ts  lockfileStore.test.ts  noteStore.svelte.ts  pipelineInjectStore.svelte.ts  pipelineRunStore.svelte.ts  pluginStore.svelte.ts  presenceStore.svelte.ts  profileStore.svelte.ts  resourceStore.svelte.ts  sessionStore.svelte.ts  settingsStore.svelte.ts  spaceStore.svelte.ts  splitStore.svelte.ts  teamStore.svelte.ts  terminalRegistry.ts  uiStore.svelte.ts  workflowStore.svelte.ts
src/lib/types/: auth.ts  collaboration.ts  federation.ts  guard.ts  hooks.ts  index.ts  lockfile.ts  session.ts  space.ts  ui.ts
src/lib/utils/: detection.ts  (+19 more)
(+87 files in other folders)
