[package]
name = "weplex"
version = "0.1.3"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
