[workspace]
members = [".", "mcp-server", "mcp-contract"]
resolver = "2"

[package]
name = "weplex"
version = "0.1.3"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
portable-pty = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
# Pinned to an exact version: notes_crypto.rs relies on the apple-native
# backend creating keychain items with `kSecAttrAccessibleWhenUnlocked` and
# the standard creator-binary ACL. A silent default change in a `keyring`
# bump (e.g. to `kSecAttrAccessibleAlways` or an open ACL) would break the
# encryption-at-rest property of activity notes. Bump deliberately, with a
# fresh review of the apple-native backend's Security.framework calls.
keyring = { version = "=3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-notification = "2"
aes-gcm = "0.10.3"
ring = "0.17.14"
hostname = "0.4.2"
whoami = "2.1.1"
tiny_http = "0.12"
log = "0.4"
env_logger = "0.11"
fs2 = "0.4"
regex = "1"
url = "2"
weplex-mcp-contract = { path = "mcp-contract" }

[features]
devtools = ["tauri/devtools"]

[profile.release]
strip = true
lto = true
codegen-units = 1
